--- a/styles.css
+++ b/styles.css
@@ -25,8 +25,8 @@ vertical-align: top;
 
     background-color: #0f0f0f;
     display: inline-block;
-    width: 12%;
-    min-height: 64px;
+    width: 8%;
+    min-height: 50px;
     text-align: center;
     padding-top: 32px;
     font-size: larger;
@@ -37,8 +37,10 @@ vertical-align: top;
     border-color: #383838;
 }
 
-/*.btn{
-    background-color: #4CAF50;
+.btn{
+    background-color:blue;
+    width: 8;
+    min-height: 64px;
   border: none;
   color: white;
   padding: 15px 32px;
@@ -46,4 +48,4 @@ vertical-align: top;
   text-decoration: none;
   display: inline-block;
   font-size: 16px; 
-} */
+} 
